# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")
import("//build/ohos.gni")
import("//build/ohos/cli/ohos_cli_executable.gni")

ohos_cli_executable("ohos-notificationManager") {
    branch_protector_ret = "pac_ret"
    cli_config_file = "ohos-notificationManager.json"

    sanitize = {
        cfi = true
        cfi_cross_dso = true
        debug = false
    }

    cflags = [
        "-fPIC",
        "-g",
    ]
    cflags += [ "-Wall" ]
    if (target_cpu == "arm") {
        cflags += [ "-DBINDER_IPC_32BIT" ]
    }
    cflags_cc = cflags

    sources = [
        "src/main.cpp",
        "src/shell_command.cpp",
        "src/notification_shell_command.cpp",
        "src/command_output.cpp",
    ]

    include_dirs = [
        "include",
        "${inner_api_path}",
        "${frameworks_module_ans_path}",
        "${core_path}/common/include",
    ]

    deps = [ "${frameworks_module_ans_path}:ans_innerkits" ]

    configs = [ "${frameworks_module_ans_path}:ans_innerkits_public_config" ]

    external_deps = [
        "cJSON:cjson",
        "access_token:libnativetoken_shared",
        "access_token:libtokensetproc_shared",
        "c_utils:utils",
        "ffrt:libffrt",
        "hilog:libhilog",
    ]
    external_deps += component_external_deps

    subsystem_name = "${subsystem_name}"
    part_name = "${component_name}"

    install_enable = true
    install_images = ["system"]
    relative_install_dir = "cli_tool/executable"
}
